--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Application Portfolio Dashboard</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Firebase SDKs via compat -->
+    <!-- Firebase SDKs via compat
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-storage-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-storage-compat.js"></script> -->
+    <!-- Firebase SDKs via modular -->
+    <script src="./firebase/firebase-app.js"></script>
+    <script src="./firebase/firebase-auth.js"></script>
+    <script src="./firebase/firebase-firestore.js"></script>
+    <script src="./firebase/firebase-storage.js"></script>
 
     <!-- Your Firebase config file -->
     <script src="firebase-config.js"></script>
